fixed vertical alignment of icons and text in metrics buttons.

--- a/src/css/metacatui-common.css
+++ b/src/css/metacatui-common.css
@@ -1663,6 +1663,7 @@ a.btn.metrics {
 .metric-icon {
     margin-right: 10px;
     float: left;
+	padding-top: 1px;
 }
 .metric-name {
     float: left;
